--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -14,7 +14,7 @@
     <link th:href="@{https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css}" crossorigin="anonymous">
     <script th:src="@{https://code.jquery.com/jquery-3.6.0.min.js}"></script>
     <script th:src="@{https://use.fontawesome.com/releases/v6.3.0/js/all.js}" crossorigin="anonymous"></script>
-    <script th:src="@{https://cdn.jquery.com/jquery-3.7.0.js}" crossorigin="anonymous"></script>
+<!--    <script th:src="@{https://cdn.jquery.com/jquery-3.7.0.js}" crossorigin="anonymous"></script>-->
     <script th:src="@{https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js}" crossorigin="anonymous"></script>
     <script th:src="@{https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js}"
             crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
     <script th:src="@{/js/index_form.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <script th:src="@{/js/datatables-simple-demo.js}"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
