--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -50,11 +50,11 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Danh mục
                     </a>
-                    <div class="nav-link collapsed accordion accordion-flush collapsed" id="accordionFlushExample1">
-                        <div class="accordion-item">
+                    <div style="padding: 0px 0px" class="nav-link collapsed accordion accordion-flush collapsed" id="accordionFlushExample1">
+                        <div class="accordion-item" >
                             <h2 class="accordion-header" id="listsanpham1">
                                 <button class="accordion-button collapsed" style="background: rgb(30, 50, 92); color: white;" type="button" data-bs-toggle="collapse" data-bs-target="#listsanpham" aria-expanded="false" aria-controls="listsanpham">
-                                    sản phẩm
+                                    <i class="fas fa-layer-group"></i> sản phẩm
                                 </button>
                             </h2>
                             <div id="listsanpham" class="collapse" style="background: rgb(30, 50, 92); color: white;" aria-labelledby="listsanpham1" data-bs-parent="#accordionFlushExample1">
@@ -92,11 +92,11 @@
                     <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}">
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Khuyến mại</a>
-                    <div class="nav-link collapsed accordion accordion-flush collapsed" id="accordionFlushExample">
+                    <div style="padding: 0px 0px" class="nav-link collapsed accordion accordion-flush collapsed" id="accordionFlushExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingOne">
                                 <button class="accordion-button collapsed" style="background: rgb(30, 50, 92); color: white;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                    Tài nguyên sản phẩm
+                                    <i class="fas fa-layer-group"></i>    Tài nguyên sản phẩm
                                 </button>
                             </h2>
                             <div id="flush-collapseOne" class=" collapse" style="background: rgb(30, 50, 92); color: white;" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
