--- a/src/main/resources/templates/admin/thongke/statisticals.html
+++ b/src/main/resources/templates/admin/thongke/statisticals.html
@@ -14,9 +14,9 @@
                 <li class="nav-item">
                     <a class="nav-link active btn btn-outline-primary" data-bs-toggle="tab" href="#orderdetail" role="tab">Thống kê Hóa đơn</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link btn btn-outline-primary" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link btn btn-outline-primary" data-bs-toggle="tab" href="#date" role="tab">Thống kê theo Ngày</a>-->
+<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link btn btn-outline-primary" data-bs-toggle="tab" href="#category" role="tab">Thống kê theo Danh Mục</a>
                 </li>
